--- a/index.html
+++ b/index.html
@@ -1753,7 +1753,8 @@
       <footer class="footer mt-auto pt-5">
          <div class="container de"><a href="#">Links</a><a href="impressum.html">Impressum</a><a href="dsgvo.html">Datenschutzerklärung</a></div>
          <div class="container en" style="display: none"><a href="#">Links</a><a href="impressum.html">Imprint</a><a href="dsgvo.html">Privacy policy</a></div>
-      </footer><script>
+      </footer>
+      <script>
                     function langDeEn(input) {
                     var navbar = "nav.navbar ";
                     var pagetitle = "#pageTitle ";
@@ -1785,7 +1786,8 @@
                     $(footer + "div.en").show();
                     }
                     }
-                </script><script>
+                </script>
+                <script>
                     $( document ).ready(function() {
                     console.log( "ready!" );                                                
                     $("ul.navbar-nav li.nav-item a").removeClass("active");
