--- a/A001.html
+++ b/A001.html
@@ -544,8 +544,7 @@
       <footer class="footer mt-auto pt-5">
          <div class="container de"><a href="#">Links</a><a href="impressum.html">Impressum</a><a href="dsgvo.html">Datenschutzerklärung</a></div>
          <div class="container en" style="display: none"><a href="#">Links</a><a href="impressum.html">Imprint</a><a href="dsgvo.html">Privacy policy</a></div>
-      </footer>
-      <script>
+      </footer><script>
                     function langDeEn(input) {
                     var navbar = "nav.navbar " ;
                     var sidebar = "#pageContent " ;
@@ -582,12 +581,11 @@
                         $( footer + "div.en" ).show();
                     }
                     }
-                </script>
-                <script>
+                </script><script>
                     $( document ).ready(function() {
                         console.log( "ready!" );                                                
                         $("ul.navbar-nav li.nav-item a").removeClass("active");
-                        $( "[href='letters.html']" ).addClass("active");
+                        $( "[href='briefe.html']" ).addClass("active");
                         
                         $("#indexLetters div.item").hide();
                         
