--- a/search.html
+++ b/search.html
@@ -161,8 +161,8 @@
                            <div class="en">Searching...</div>
                         </div>
                         <div id="showMaxHits" style="display: none;">
-                           <div class="de">Angezeigte Treffer <span>5</span></div>
-                           <div class="en">Displayed hits <span>5</span></div>
+                           <div class="de">Angezeigte Treffer max <span></span></div>
+                           <div class="en">Displayed hits max <span></span></div>
                         </div>
                         <div id="ssResults" style="display: none;"></div>
                         <div id="ssPoweredBy" style="display: none;">
