--- a/register_person.html
+++ b/register_person.html
@@ -5,11 +5,11 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
       <meta name="mobile-web-app-capable" content="yes" />
       <meta name="apple-mobile-web-app-capable" content="yes" />
-      <meta name="apple-mobile-web-app-title" content="Über das ProjektEdition der Familienkorrespondenz Ferdinands I." />
+      <meta name="apple-mobile-web-app-title" content="Person Register in TEI generated from TEI data of letters" />
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" referrerpolicy="no-referrer" />
       <link href="css/mockup/style.css" rel="stylesheet" /><script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script><link rel="profile" href="http://gmpg.org/xfn/11" />
-      <title>Über das ProjektEdition der Familienkorrespondenz Ferdinands I.</title><script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/openseadragon/2.4.2/openseadragon.min.js"></script></head>
+      <title>Person Register in TEI generated from TEI data of letters</title><script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/openseadragon/2.4.2/openseadragon.min.js"></script></head>
    <body id="register">
       <header>
          <div class="container" id="headnav">
@@ -68,7 +68,151 @@
                            <th scope="col"><span class="de">Vorkommen</span><span class="en">Occurence</span></th>
                         </tr>
                      </thead>
-                     <tbody></tbody>
+                     <tbody>
+                        <tr>
+                           <td style="display: none">person_d3e241a1038</td>
+                           <td style="display: none"></td>
+                           <td style="display: none"></td>
+                           <td>Bannissis, Jacobus de, Sekretär Maximilians I. </td>
+                           <td>
+                              <p>Ja. de Bannissis.</p>
+                           </td>
+                           <td>
+                              <p><span class="de">Band_1</span><span class="en">Volume_1</span>, <a href="A002.html">A2.</a></p>
+                           </td>
+                        </tr>
+                        <tr>
+                           <td style="display: none">person_d2e209a1038</td>
+                           <td style="display: none"></td>
+                           <td style="display: none"></td>
+                           <td>Ferdinand II., der Katholische, König von Aragón</td>
+                           <td>
+                              <p>regi</p>
+                              <p>Catholicum regem,</p>
+                              <p>Yo</p>
+                           </td>
+                           <td>
+                              <p><span class="de">Band_1</span><span class="en">Volume_1</span>, <a href="A001.html">A1.</a></p>
+                              <p><span class="de">Band_1</span><span class="en">Volume_1</span>, <a href="A002.html">A2.</a></p>
+                              <p><span class="de">Band_1</span><span class="en">Volume_1</span>, <a href="A003.html">A3.</a></p>
+                           </td>
+                        </tr>
+                        <tr>
+                           <td style="display: none">person_d2e281a1038</td>
+                           <td style="display: none"></td>
+                           <td style="display: none"></td>
+                           <td>Germaine de Foix, Königin von Aragón, zweite Frau Ferdinands des Katholischen </td>
+                           <td>
+                              <p>Germaine</p>
+                           </td>
+                           <td>
+                              <p><span class="de">Band_1</span><span class="en">Volume_1</span>, <a href="A001.html">A1.</a></p>
+                           </td>
+                        </tr>
+                        <tr>
+                           <td style="display: none">person_d3e199a1038</td>
+                           <td style="display: none"></td>
+                           <td style="display: none"></td>
+                           <td>Gylabertus, Aloysius</td>
+                           <td>
+                              <p>Aloysio Gylaberto</p>
+                           </td>
+                           <td>
+                              <p><span class="de">Band_1</span><span class="en">Volume_1</span>, <a href="A002.html">A2.</a></p>
+                           </td>
+                        </tr>
+                        <tr>
+                           <td style="display: none">person_d2e212a1038</td>
+                           <td style="display: none"></td>
+                           <td style="display: none"></td>
+                           <td>Isabella die Katholische, Königin von Kastilien</td>
+                           <td>
+                              <p>regine</p>
+                           </td>
+                           <td>
+                              <p><span class="de">Band_1</span><span class="en">Volume_1</span>, <a href="A001.html">A1.</a></p>
+                           </td>
+                        </tr>
+                        <tr>
+                           <td style="display: none">person_d2e284a1038</td>
+                           <td style="display: none"></td>
+                           <td style="display: none"></td>
+                           <td>Johanna von Kastilien, Gattin Philipps I. („des Schönen“), „Johanna die Wahnsinnige“,
+                              Königin von Kastilien (1504-1555)</td>
+                           <td>
+                              <p>Johanna von Kastilien</p>
+                              <p>sermas reginas matres</p>
+                           </td>
+                           <td>
+                              <p><span class="de">Band_1</span><span class="en">Volume_1</span>, <a href="A001.html">A1.</a></p>
+                              <p><span class="de">Band_1</span><span class="en">Volume_1</span>, <a href="A002.html">A2.</a></p>
+                           </td>
+                        </tr>
+                        <tr>
+                           <td style="display: none">person_d3e214a1038</td>
+                           <td style="display: none"></td>
+                           <td style="display: none"></td>
+                           <td>Katharina von Österreich, Königin von Portugal</td>
+                           <td>
+                              <p>ames</p>
+                           </td>
+                           <td>
+                              <p><span class="de">Band_1</span><span class="en">Volume_1</span>, <a href="A002.html">A2.</a></p>
+                           </td>
+                        </tr>
+                        <tr>
+                           <td style="display: none">person_d2e199a1038</td>
+                           <td style="display: none"></td>
+                           <td style="display: none"></td>
+                           <td>Maximilian I., Kaiser</td>
+                           <td>
+                              <p>nobis</p>
+                              <p>Maximilianus</p>
+                           </td>
+                           <td>
+                              <p><span class="de">Band_1</span><span class="en">Volume_1</span>, <a href="A001.html">A1.</a></p>
+                              <p><span class="de">Band_1</span><span class="en">Volume_1</span>, <a href="A002.html">A2.</a></p>
+                           </td>
+                        </tr>
+                        <tr>
+                           <td style="display: none">person_d2e193a1038</td>
+                           <td style="display: none"></td>
+                           <td style="display: none"></td>
+                           <td>Orti, Gabriel von</td>
+                           <td>
+                              <p>Cabriel de Horti</p>
+                           </td>
+                           <td>
+                              <p><span class="de">Band_1</span><span class="en">Volume_1</span>, <a href="A001.html">A1.</a></p>
+                           </td>
+                        </tr>
+                        <tr>
+                           <td style="display: none">person_d2e268a1038</td>
+                           <td style="display: none"></td>
+                           <td style="display: none"></td>
+                           <td>Quintana, Pedro de, Sekretär Ferdinands des Katholischen</td>
+                           <td>
+                              <p>Petrus Quintana</p>
+                              <p>Pedro de Quyntana</p>
+                           </td>
+                           <td>
+                              <p><span class="de">Band_1</span><span class="en">Volume_1</span>, <a href="A001.html">A1.</a></p>
+                              <p><span class="de">Band_1</span><span class="en">Volume_1</span>, <a href="A003.html">A3.</a></p>
+                           </td>
+                        </tr>
+                        <tr>
+                           <td style="display: none">person_d2e265a1038</td>
+                           <td style="display: none"></td>
+                           <td style="display: none"></td>
+                           <td>Renée (Renata) de France, spätere Herzogin von Ferrara</td>
+                           <td>
+                              <p>Renata</p>
+                           </td>
+                           <td>
+                              <p><span class="de">Band_1</span><span class="en">Volume_1</span>, <a href="A001.html">A1.</a></p>
+                           </td>
+                        </tr>
+                     </tbody>
                   </table>
                </div>
             </div>
@@ -112,7 +256,7 @@
             </script><script>
                $( document ).ready(function() {
                   
-                  var fileName = 'about' ;
+                  var fileName = 'register_person' ;
                   
                   $("ul.navbar-nav li.nav-item a").removeClass("active");
                   $( "[href='register.html']" ).addClass("active");
