--- a/A001.html
+++ b/A001.html
@@ -585,7 +585,7 @@
                     $( document ).ready(function() {
                         console.log( "ready!" );                                                
                         $("ul.navbar-nav li.nav-item a").removeClass("active");
-                        $( "[href='briefe.html']" ).addClass("active");
+                        $( "[href='letters.html']" ).addClass("active");
                         
                         $("#indexLetters div.item").hide();
                         
