--- a/A152.html
+++ b/A152.html
@@ -679,7 +679,7 @@
                                           <div class="en">People references</div>
                                        </td>
                                        <td><a href="#person_d159e103a1050">Basin, Guillaume, Lizentiat der Rechte, F’s Vertreter bei K in Sachen des Prozesses,
-                                             den Nachlass nach dem Herrn von Neuchâtel betreffend </a> | 
+                                             den Nachlass nach dem Herrn von Neuchâtel betreffend</a> | 
                                           <a href="#person_d159e168a1050">Cusance, Ferry de, Herr von Belvoir (Saint-Julien und Darcey)</a> | 
                                           <a href="#person_d4e764a1050">Fürstenberg, Graf Wilhelm von</a> | 
                                           <a href="#person_d27e98a1050">Hemricourt</a> | 
@@ -854,7 +854,7 @@
                               <div class="item" id="person_d159e103a1050">
                                  <h3>Eintrag</h3>
                                  <h4>Basin, Guillaume, Lizentiat der Rechte, F’s Vertreter bei K in Sachen des Prozesses,
-                                    den Nachlass nach dem Herrn von Neuchâtel betreffend  (Person)</h4>
+                                    den Nachlass nach dem Herrn von Neuchâtel betreffend (Person)</h4>
                                  <h4>Schreibweisen: <span class="fas fa-arrows-alt-v"></span></h4>
                                  <ul class="scroll-area">
                                     <li>Guillaume Basin</li>
@@ -862,6 +862,7 @@
                                  <h4>Vorkommen: <span class="fas fa-arrows-alt-v"></span></h4>
                                  <ul class="scroll-area">
                                     <li>Band_1, <a href="A152.html#person_d159e103a1050">A152.</a></li>
+                                    <li>Band_1, <a href="A172.html#person_d159e103a1050">A172.</a></li>
                                  </ul>
                               </div>
                               <div class="item" id="person_d159e106a1050">
@@ -1394,7 +1395,7 @@
                               <div class="item" id="person_d159e103a1050">
                                  <h3>Entry</h3>
                                  <h4>Basin, Guillaume, Lizentiat der Rechte, F’s Vertreter bei K in Sachen des Prozesses,
-                                    den Nachlass nach dem Herrn von Neuchâtel betreffend  (Person)</h4>
+                                    den Nachlass nach dem Herrn von Neuchâtel betreffend (Person)</h4>
                                  <h4>Spellings: <span class="fas fa-arrows-alt-v"></span></h4>
                                  <ul class="scroll-area">
                                     <li>Guillaume Basin</li>
@@ -1402,6 +1403,7 @@
                                  <h4>Occur: <span class="fas fa-arrows-alt-v"></span></h4>
                                  <ul class="scroll-area">
                                     <li>Volume_1, <a href="A152.html#person_d159e103a1050">A152.</a></li>
+                                    <li>Volume_1, <a href="A172.html#person_d159e103a1050">A172.</a></li>
                                  </ul>
                               </div>
                               <div class="item" id="person_d159e106a1050">
