Update from https://github.com/KfNGOe/ferdinand-I-app/commit/70d4e74de5145140088fef09a1e587dbd996e0bb

--- a/370215KFa.html
+++ b/370215KFa.html
@@ -4412,9 +4412,9 @@
                                  <ul class="scroll-area">
                                     <li></li>
                                     <li>Ferrette</li>
+                                    <li>Ferrete</li>
                                     <li>Ferretensis</li>
                                     <li>Ferretensem</li>
-                                    <li>Ferrete</li>
                                     <li>Ferrette</li>
                                     <li>Ferette</li>
                                     <li>Ferrete</li>
@@ -4424,6 +4424,7 @@
                                     <li>Band_1, <a href="370215KFa.html#index_d4e375a1051">370215KFa.</a></li>
                                     <li>Band_1, <a href="A018.html#index_d4e375a1051">A18.</a></li>
                                     <li>Band_1, <a href="A021.html#index_d4e375a1051">A21.</a></li>
+                                    <li>Band_1, <a href="A062.html#index_d4e375a1051">A62.</a></li>
                                     <li>Band_1, <a href="A072.html#index_d4e375a1051">A72.</a></li>
                                     <li>Band_1, <a href="A076.html#index_d4e375a1051">A76.</a></li>
                                     <li>Band_1, <a href="A089.html#index_d4e375a1051">A89.</a></li>
@@ -7478,9 +7479,9 @@
                                  <ul class="scroll-area">
                                     <li></li>
                                     <li>Ferrette</li>
+                                    <li>Ferrete</li>
                                     <li>Ferretensis</li>
                                     <li>Ferretensem</li>
-                                    <li>Ferrete</li>
                                     <li>Ferrette</li>
                                     <li>Ferette</li>
                                     <li>Ferrete</li>
@@ -7490,6 +7491,7 @@
                                     <li>Volume_1, <a href="370215KFa.html#index_d4e375a1051">370215KFa.</a></li>
                                     <li>Volume_1, <a href="A018.html#index_d4e375a1051">A18.</a></li>
                                     <li>Volume_1, <a href="A021.html#index_d4e375a1051">A21.</a></li>
+                                    <li>Volume_1, <a href="A062.html#index_d4e375a1051">A62.</a></li>
                                     <li>Volume_1, <a href="A072.html#index_d4e375a1051">A72.</a></li>
                                     <li>Volume_1, <a href="A076.html#index_d4e375a1051">A76.</a></li>
                                     <li>Volume_1, <a href="A089.html#index_d4e375a1051">A89.</a></li>
