--- a/A062.html
+++ b/A062.html
@@ -724,7 +724,7 @@
                                        <td><a href="#index_d68e407a1051">Burgund</a> | 
                                           <a href="#index_d4e211a1051">Deutschland</a> | 
                                           <a href="#index_d21e110a1051">F, Heirat mit A</a> | 
-                                          <a href="#index_d68e390a1051">Ferrette </a> | 
+                                          <a href="#index_d4e375a1051">Ferrette</a> | 
                                           <a href="#index_d4e241a1051">Flandern</a> | 
                                           <a href="#index_d56e310a1051">HRR, Gemeiner Pfennig</a> | 
                                           <a href="#index_d24e452a1051">HRR, Reichstag, Nürnberg (1522/23)</a> | 
@@ -799,7 +799,7 @@
                                  
                                  <p>(B.) Brüssel, Arch. gén. Pap. de l'État et de lʼAudience vol. 42. Kopie s. XVIII.</p>
                                  
-                                 <p>Druck: Abschnitt 9 von <b>j’entendz et congnois</b> an in DRA 4, S. 640, Anm. 1. Familienkorrespondenz Bd. 1, Nr. 62, S. 103-110.</p>
+                                 <p>Druck: Abschnitt 9 von<b> j’entendz et congnois</b> an in DRA 4, S. 640, Anm. 1. Familienkorrespondenz Bd. 1, Nr. 62, S. 103-110.</p>
                                  </div>
                               <div class="letter">
                                  <h4>Transkript</h4>
@@ -959,7 +959,7 @@
                                  <p>Quant<b>l</b>) ausurplus de tous mes aultres affaires d’estat etc. soit mis, quant en la lectre
                                     de m<b>me</b> jusques à ce que sans deliberer faire de ma part. Et cependant vous prie vous tenir
                                     à la frontiere de 
-                                    <a href="#index_d68e390a1051">Ferrete</a>
+                                    <a href="#index_d4e375a1051">Ferrete</a>
                                      pour donner crainte aux ennemiz et adviser avec lesd. <a href="#person_d54e97a1050">s<b>rs</b> de Bourbon</a>, nostre beau frere,<b>m</b>) et led. <a href="#person_d27e663a1050">viceroi de Naples</a>, si pourriez executer l’emprinse de 
                                     <a href="#index_d68e407a1051">Bourgogne</a>
                                      dont aultres fois vous ai escript, car aultrement en demeureroie tousjours dehors
@@ -1001,7 +1001,7 @@
                                      angenommenen Anschlag wider die Türken eingehen wollten. In dieser Proposition heißt
                                     es jedoch: <b>„und aber ir kai. M</b>
                                     <b>t</b>
-                                    <b>gnediclich bedacht, daz diser zeit der gemain phening, ee er eingebracht, etwas vil
+                                    <b> gnediclich bedacht, daz diser zeit der gemain phening, ee er eingebracht, etwas vil
                                        weil und zeit nemen wurd und doch ainer eilenden hilf wider die Turken hoch von nöten
                                        .</b> . .“ DRA. 4, S. 294. Hieraus ergibt sich, daß zumindest Hannart von der Forderung
                                     des Gemeinen Pfennigs absah. Es war von diesem, wie es scheint, in den Verhandlungen
@@ -3099,16 +3099,41 @@
                                     <li>Band_1, <a href="A256.html#index_d32e217a1051">A256.</a></li>
                                  </ul>
                               </div>
-                              <div class="item" id="index_d68e390a1051">
+                              <div class="item" id="index_d4e375a1051">
                                  <h3>Eintrag</h3>
-                                 <h4>Ferrette  (Schlagwort)</h4>
+                                 <h4>Ferrette (Schlagwort)</h4>
                                  <h4>Schreibweisen: <span class="fas fa-arrows-alt-v"></span></h4>
                                  <ul class="scroll-area">
+                                    <li></li>
+                                    <li>Ferrette</li>
+                                    <li>Ferrete</li>
+                                    <li>Ferretensis</li>
+                                    <li>Ferretensem</li>
+                                    <li>Ferrette</li>
+                                    <li>Ferette</li>
                                     <li>Ferrete</li>
                                  </ul>
                                  <h4>Vorkommen: <span class="fas fa-arrows-alt-v"></span></h4>
                                  <ul class="scroll-area">
-                                    <li>Band_1, <a href="A062.html#index_d68e390a1051">A62.</a></li>
+                                    <li>Band_1, <a href="370215KFa.html#index_d4e375a1051">370215KFa.</a></li>
+                                    <li>Band_1, <a href="A018.html#index_d4e375a1051">A18.</a></li>
+                                    <li>Band_1, <a href="A021.html#index_d4e375a1051">A21.</a></li>
+                                    <li>Band_1, <a href="A062.html#index_d4e375a1051">A62.</a></li>
+                                    <li>Band_1, <a href="A072.html#index_d4e375a1051">A72.</a></li>
+                                    <li>Band_1, <a href="A076.html#index_d4e375a1051">A76.</a></li>
+                                    <li>Band_1, <a href="A089.html#index_d4e375a1051">A89.</a></li>
+                                    <li>Band_1, <a href="A100.html#index_d4e375a1051">A100.</a></li>
+                                    <li>Band_1, <a href="A117.html#index_d4e375a1051">A117.</a></li>
+                                    <li>Band_1, <a href="A121b.html#index_d4e375a1051">A121b.</a></li>
+                                    <li>Band_1, <a href="A122.html#index_d4e375a1051">A122.</a></li>
+                                    <li>Band_1, <a href="A124.html#index_d4e375a1051">A124.</a></li>
+                                    <li>Band_1, <a href="A125.html#index_d4e375a1051">A125.</a></li>
+                                    <li>Band_1, <a href="A131.html#index_d4e375a1051">A131.</a></li>
+                                    <li>Band_1, <a href="A136.html#index_d4e375a1051">A136.</a></li>
+                                    <li>Band_1, <a href="A142.html#index_d4e375a1051">A142.</a></li>
+                                    <li>Band_1, <a href="A153.html#index_d4e375a1051">A153.</a></li>
+                                    <li>Band_1, <a href="A184.html#index_d4e375a1051">A184.</a></li>
+                                    <li>Band_1, <a href="A256.html#index_d4e375a1051">A256.</a></li>
                                  </ul>
                               </div>
                               <div class="item" id="index_d68e407a1051">
@@ -5207,16 +5232,41 @@
                                     <li>Volume_1, <a href="A256.html#index_d32e217a1051">A256.</a></li>
                                  </ul>
                               </div>
-                              <div class="item" id="index_d68e390a1051">
+                              <div class="item" id="index_d4e375a1051">
                                  <h3>Entry</h3>
-                                 <h4>Ferrette  (Schlagwort)</h4>
+                                 <h4>Ferrette (Schlagwort)</h4>
                                  <h4>Spellings: <span class="fas fa-arrows-alt-v"></span></h4>
                                  <ul class="scroll-area">
+                                    <li></li>
+                                    <li>Ferrette</li>
+                                    <li>Ferrete</li>
+                                    <li>Ferretensis</li>
+                                    <li>Ferretensem</li>
+                                    <li>Ferrette</li>
+                                    <li>Ferette</li>
                                     <li>Ferrete</li>
                                  </ul>
                                  <h4>Occur: <span class="fas fa-arrows-alt-v"></span></h4>
                                  <ul class="scroll-area">
-                                    <li>Volume_1, <a href="A062.html#index_d68e390a1051">A62.</a></li>
+                                    <li>Volume_1, <a href="370215KFa.html#index_d4e375a1051">370215KFa.</a></li>
+                                    <li>Volume_1, <a href="A018.html#index_d4e375a1051">A18.</a></li>
+                                    <li>Volume_1, <a href="A021.html#index_d4e375a1051">A21.</a></li>
+                                    <li>Volume_1, <a href="A062.html#index_d4e375a1051">A62.</a></li>
+                                    <li>Volume_1, <a href="A072.html#index_d4e375a1051">A72.</a></li>
+                                    <li>Volume_1, <a href="A076.html#index_d4e375a1051">A76.</a></li>
+                                    <li>Volume_1, <a href="A089.html#index_d4e375a1051">A89.</a></li>
+                                    <li>Volume_1, <a href="A100.html#index_d4e375a1051">A100.</a></li>
+                                    <li>Volume_1, <a href="A117.html#index_d4e375a1051">A117.</a></li>
+                                    <li>Volume_1, <a href="A121b.html#index_d4e375a1051">A121b.</a></li>
+                                    <li>Volume_1, <a href="A122.html#index_d4e375a1051">A122.</a></li>
+                                    <li>Volume_1, <a href="A124.html#index_d4e375a1051">A124.</a></li>
+                                    <li>Volume_1, <a href="A125.html#index_d4e375a1051">A125.</a></li>
+                                    <li>Volume_1, <a href="A131.html#index_d4e375a1051">A131.</a></li>
+                                    <li>Volume_1, <a href="A136.html#index_d4e375a1051">A136.</a></li>
+                                    <li>Volume_1, <a href="A142.html#index_d4e375a1051">A142.</a></li>
+                                    <li>Volume_1, <a href="A153.html#index_d4e375a1051">A153.</a></li>
+                                    <li>Volume_1, <a href="A184.html#index_d4e375a1051">A184.</a></li>
+                                    <li>Volume_1, <a href="A256.html#index_d4e375a1051">A256.</a></li>
                                  </ul>
                               </div>
                               <div class="item" id="index_d68e407a1051">
