--- a/editor/index.html
+++ b/editor/index.html
@@ -19,14 +19,15 @@
         }
     </style>
     <link rel="stylesheet" href="styles.6534848ffff52156.css" media="print" onload="this.media='all'" />
-    <noscript><link rel="stylesheet" href="styles.6534848ffff52156.css" /></noscript>
+    <noscript><link rel="stylesheet" href="styles.6534848ffff52156.css"
+    /></noscript>
 </head>
 
 <body>
     <app-root></app-root>
     <script src="runtime.7678c1832dedae29.js" type="module"></script>
     <script src="polyfills.7e8b4abbd2c97f33.js" type="module"></script>
-    <script src="main.146ed656435582f6.js" type="module"></script>
+    <script src="main.d3fab9e97fcae479.js" type="module"></script>
 </body>
 
 </html>
